Fix GUI Crashing